===================
astroid's ChangeLog
===================


What's New in astroid 4.1.0?
============================
Release date: TBA



What's New in astroid 4.0.1?
============================
Release date: TBA



What's New in astroid 4.0.0?
============================
Release date: 2025-10-05

* Support constraints from ternary expressions in inference.

  Closes pylint-dev/pylint#9729

* Handle deprecated `bool(NotImplemented)` cast in const nodes.

* Add support for boolean truthiness constraints (`x`, `not x`) in inference.

  Closes pylint-dev/pylint#9515

* Fix false positive `invalid-name` on `attrs` classes with `ClassVar` annotated variables.

  Closes pylint-dev/pylint#10525

* Prevent crash when parsing deeply nested parentheses causing MemoryError in python's built-in ast.

  Closes #2643

* Fix crash when inferring namedtuple with invalid field name looking like f-string formatting.

  Closes #2519

* Fix false positive no-member in except * handler.

  Closes pylint-dev/pylint#9056

* Fix crash when comparing invalid dict literal

  Closes #2522

* Removed internal functions ``infer_numpy_member``, ``name_looks_like_numpy_member``, and
  ``attribute_looks_like_numpy_member`` from ``astroid.brain.brain_numpy_utils``.

* To alleviate circular imports, the ``manager`` argument to ``AstroidBuilder()`` is now required.

* Constants now have a parent of ``nodes.SYNTHETIC_ROOT``.

* Fix crashes with large positive and negative list multipliers.

  Closes #2521
  Closes #2523

* Fix precedence of `path` arg in `modpath_from_file_with_callback` to be higher than `sys.path`

* Following a deprecation period, the ``future`` argument was removed from ``statement()`` and ``frame()``.

* Improve consistency of ``JoinedStr`` inference by not raising ``InferenceError`` and
  returning either ``Uninferable`` or a fully resolved ``Const``.

  Closes #2621

* Fix crash when typing._alias() call is missing arguments.

  Closes #2513
