@@ -13,6 +13,7 @@ What's New in astroid 4.0.1?
 ============================
 Release date: TBA
 
+* Make `type.__new__()` raise clear errors instead of returning `None`
 
 
 What's New in astroid 4.0.0?
